--- a/AudioSplitter.Cli.Tests/AudioSplitter.Cli.Tests.csproj
+++ b/AudioSplitter.Cli.Tests/AudioSplitter.Cli.Tests.csproj
@@ -1,27 +1,31 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" />
-    <PackageReference Include="NAudio" />
-    <PackageReference Include="OpenTK.Audio.OpenAL" VersionOverride="4.9.4" />
+    <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
 
   <ItemGroup>
+    <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AudioSplitter.Cli\AudioSplitter.Cli.csproj" />
     <ProjectReference Include="..\AudioSplitter.Core\AudioSplitter.Core.csproj" />
+    <ProjectReference Include="..\AudioProcessor\AudioProcessor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Middleware\**\*.cs" />
     <Compile Include="Infrastructure\**\*.cs" />
     <Compile Include="Presentation\**\*.cs" />
   </ItemGroup>
