feat(cli): add shared dual-line progress bars with --progress

--- a/AudioSplitter.Cli/AudioSplitter.Cli.csproj
+++ b/AudioSplitter.Cli/AudioSplitter.Cli.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cli.Shared\Cli.Shared.csproj" />
     <ProjectReference Include="..\AudioSplitter.Core\AudioSplitter.Core.csproj" />
   </ItemGroup>
 
