fix(cli-shared): align namespaces to Cli.Shared and add CA1716 suppression

--- a/Cli.Shared/Cli.Shared.csproj
+++ b/Cli.Shared/Cli.Shared.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <NoWarn>$(NoWarn);CA1716</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
