feat(sound-analyzer): rename SFFT to STFT and add sample-based STFT parameters

--- a/SoundAnalyzer.Cli/SoundAnalyzer.Cli.csproj
+++ b/SoundAnalyzer.Cli/SoundAnalyzer.Cli.csproj
@@ -3,7 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Cli.Shared\Cli.Shared.csproj" />
     <ProjectReference Include="..\PeakAnalyzer.Core\PeakAnalyzer.Core.csproj" />
-    <ProjectReference Include="..\SFFTAnalyzer.Core\SFFTAnalyzer.Core.csproj" />
+    <ProjectReference Include="..\STFTAnalyzer.Core\STFTAnalyzer.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
